# Python-Starter-Template

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  bitbucket-pipelines.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  setup.py
docker/: Dockerfile
sql/: db.sql
tests/: test_example.py
